src/test/declaraciones_asignaciones/error_asign_incompatible.cps
// ❌ Debe fallar: tipo incompatible en asignación.
let x: integer;  // declarado como integer
x = "hola";      // error: no se puede asignar string a integer
